# cucim

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_DESCRIPTION.md  COMPILATION_SUCCESS.md  COMPONENT_FLOW_ARCHITECTURE.md  CONTRIBUTING.md  CUSLIDE_VS_CUSLIDE2.md  Cache Example.ipynb  Dockerfile-cuda110  Dockerfile-cuda111  IFD_CODE_DOCUMENTATION.md  LATEST_FIX.md  LICENSE  LICENSE-3rdparty.md  NEXT_STEPS.md  NVIMGCODEC_CODE_DOCUMENTATION.md  PHILIPS_METADATA_SUCCESS.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SHARED_PTR_FIX.md  SINGLE_THREADED_TEST.md  TESTING_GUIDE.md  TESTING_PHILIPS_TIFF.md  TIFF_TAG_USAGE_EXAMPLES.md  VARIANT_TIFF_TAG_IMPLEMENTATION.md  VERSION  analyze_demo_results.py  build.sh  build_and_run_reproducer.sh  build_docker.sh  check_nvimgcodec_backends.py  check_nvimgcodec_codecs.cpp  check_nvimgcodec_installation.sh  clean_rebuild_cuslide2.sh  cleanup_cuslide2_cpu_decoders.sh  (+46 more)
benchmarks/: CMakeLists.txt  config.h  main.cpp  primitives.cpp
benchmarks/gds/: gds_performance.py  gds_random_access_performance.py  gen_testdata.py
benchmarks/skimage/: _image_bench.py  bench_convolve.py  cucim_color_bench.py  cucim_exposure_bench.py  cucim_feature_bench.py  cucim_filters_bench.py  cucim_filters_rank_bench.py  cucim_measure_bench.py  cucim_metrics_bench.py  cucim_morphology_bench.py  cucim_registration_bench.py  cucim_restoration_bench.py  cucim_segmentation_bench.py  cucim_transform_bench.py  cupyx_scipy_ndimage_filter_bench.py  cupyx_scipy_ndimage_fourier_bench.py  cupyx_scipy_ndimage_interp_bench.py  cupyx_scipy_ndimage_measurements_bench.py  cupyx_scipy_ndimage_morphology_bench.py  requirements-bench.txt  run-all.sh  run-nv-bench-color.sh  run-nv-bench-exposure.sh  run-nv-bench-feature.sh  run-nv-bench-filters-rank.sh  run-nv-bench-filters.sh  run-nv-bench-measure.sh  run-nv-bench-metrics.sh  run-nv-bench-morphology.sh  run-nv-bench-registration.sh  run-nv-bench-restoration.sh  run-nv-bench-segmentation.sh  run-nv-bench-transform.sh
cpp/: CMakeLists.txt
cpp/cmake/: cucim-config.cmake.in
cpp/include/cucim/: cuimage.h
cpp/include/cucim/cache/: cache_type.h  image_cache.h  image_cache_config.h  image_cache_manager.h
cpp/include/cucim/codec/: base64.h  hash_function.h  methods.h
cpp/include/cucim/concurrent/: threadpool.h
cpp/include/cucim/config/: config.h
cpp/include/cucim/core/: framework.h  interface.h  plugin.h  plugin_util.h  version.h
cpp/include/cucim/cpp20/: find_if.h
cpp/include/cucim/dynlib/: helper.h
cpp/include/cucim/filesystem/: cufile_driver.h  file_handle.h  file_path.h
cpp/include/cucim/io/: device.h  device_type.h
cpp/include/cucim/loader/: batch_data_processor.h  thread_batch_data_loader.h  tile_info.h
cpp/include/cucim/logger/: logger.h  timer.h
cpp/include/cucim/macros/: api_header.h  defines.h
cpp/include/cucim/memory/: dlpack.h  memory_manager.h
cpp/include/cucim/plugin/: image_format.h  plugin_config.h
cpp/include/cucim/profiler/: nvtx3.h  profiler.h  profiler_config.h
cpp/include/cucim/util/: checked_math.h  cuda.h  file.h  platform.h
cpp/plugins/cucim.kit.cumed/: .clang-format  .gitignore  CMakeLists.txt  VERSION
cpp/plugins/cucim.kit.cumed/benchmarks/: CMakeLists.txt  config.h  main.cpp
cpp/plugins/cucim.kit.cumed/cmake/: cucim.kit.cumed-config.cmake.in
cpp/plugins/cucim.kit.cumed/tests/: CMakeLists.txt  config.h  (+2 more)
cpp/plugins/cucim.kit.cuslide/: .gitignore  CMakeLists.txt  VERSION  test_data
cpp/plugins/cucim.kit.cuslide2/: .clang-format  CMakeLists.txt  cuslide.map  test_nvimgcodec_install.py
cpp/src/: cuimage.cpp
cpp/src/cache/: cache_type.cpp  image_cache.cpp  image_cache_config.cpp  image_cache_empty.cpp  image_cache_empty.h  image_cache_manager.cpp  image_cache_per_process.cpp  image_cache_per_process.h  image_cache_shared_memory.cpp  image_cache_shared_memory.h
cpp/src/codec/: base64.cpp
cpp/src/concurrent/: threadpool.cpp
cpp/src/config/: config.cpp
cpp/src/core/: cucim_framework.cpp  cucim_framework.h  cucim_plugin.cpp  cucim_plugin.h  framework.cpp  plugin_manager.cpp  plugin_manager.h  version.inl
cpp/src/filesystem/: cufile_driver.cpp  file_handle.cpp
cpp/src/io/: device.cpp  device_type.cpp
cpp/src/loader/: batch_data_processor.cpp  thread_batch_data_loader.cpp
cpp/src/logger/: logger.cpp  timer.cpp
cpp/src/memory/: memory_manager.cpp  memory_manager.cu
cpp/src/plugin/: image_format.cpp  plugin_config.cpp
cpp/src/profiler/: profiler.cpp  profiler_config.cpp
cpp/src/util/: file.cpp  platform.cpp
cpp/tests/: CMakeLists.txt  config.h  main.cpp  test_concurrentqueue.cpp  test_cufile.cpp  test_image_cache.cpp  test_metadata.cpp  test_read_region.cpp
examples/cpp/: CMakeLists.txt  CMakeLists.txt.examples.release.in
examples/cpp/tiff_image/: main.cpp
gds/: CMakeLists.txt
gds/include/: cufile_stub.h
gds/src/: cufile_stub.cpp
python/: .clang-format  .gitignore  CMakeLists.txt
python/cmake/modules/: SuperBuildUtils.cmake
python/cucim/: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitattributes  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.md  MANIFEST.in  README.md  VERSION  pyproject.toml  pyproject_.toml  requirements-test.txt  setup.cfg  setup.py  tox.ini  versioneer.py
python/cucim/ci/: bootstrap.py  requirements.txt
python/cucim/docs/: conf.py  index.md  requirements.txt
python/cucim/src/: localtest.py
python/cucim/tests/: conftest.py  test_cucim.py
python/pybind11/: cucim_py.cpp  cucim_py.h  cucim_pydoc.h  macros.h
python/pybind11/cache/: cache_py.cpp  cache_py.h  cache_pydoc.h  image_cache_py.cpp  image_cache_py.h  image_cache_pydoc.h
python/pybind11/filesystem/: cufile_py.cpp  cufile_py.h  cufile_pydoc.h  filesystem_py.cpp  filesystem_py.h  filesystem_pydoc.h  init.h
python/pybind11/io/: device_py.cpp  device_pydoc.h  init.h  io_py.cpp  io_py.h  io_pydoc.h
python/pybind11/memory/: init.h  memory_py.cpp  memory_py.h  memory_pydoc.h
python/pybind11/profiler/: profiler_py.cpp  profiler_py.h  profiler_pydoc.h
(+570 files in other folders)
